# poutils

./: LICENSE  README-zh.md  README.md  meson.build  poedit.1.in  poedit.bash  update_po_translations.py
debian/: changelog  control  copyright
man/de/: poedit.1.in
man/eo/: poedit.1.in
man/fr/: poedit.1.in
man/it/: poedit.1.in
man/ja/: poedit.1.in
man/ko/: poedit.1.in
man/th/: poedit.1.in
man/vi/: poedit.1.in
man/zh_CN/: poedit.1.in
man/zh_TW/: poedit.1.in
po/: POTFILES  de.po  eo.po  fr.po  it.po  ja.po  ko.po  meson.build  poutils.pot  th.po  vi.po  zh_CN.po  zh_TW.po
src/: poedit.c  poedit.h  poformat.c  poformat.h  tsvformat.c  tsvformat.h
tests/: poedit_unit.c  poformat_unit.c  tsvformat_unit.c
tools/: gen_man_in.py
